# HyprInk

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Project.conf  README.md
examples/: hyprland.conf  hyprland.lua
packaging/aur/: .SRCINFO  PKGBUILD
src/: main.cpp
